=== master

* Deprecate Sequel::Postgres.client_min_messages and force_standard_strings accessors (jeremyevans)

* Deprecate Sequel::Postgres.use_iso_date_format accessor (jeremyevans)

* Do not allow connection in postgres adapter if postgres-pr driver is used and force_standard_strings is false (jeremyevans)

* Drop support for ancient postgres driver in postgres adapter, now only pg and postgres-pr drivers are supported (jeremyevans)

* Deprecate Sequel::MySQL.convert_invalid_date_time accessor (jeremyevans)

* Deprecate Sequel::MySQL.convert_tinyint_to_bool accessor (jeremyevans)

* Deprecate Sequel::MySQL.default_{charset,collate,engine} accessors (jeremyevans)

* Add Database#default_{charset,collate,engine} accessors on MySQL (jeremyevans)

* Make mock adapter thread safe (jeremyevans)

* Deprecate Sequel::JDBC::Dataset#convert_types accessor (jeremyevans)

* Add Sequel::JDBC::Dataset#with_convert_types (jeremyevans)

* Deprecate Sequel::IBMDB::Dataset#convert_smallint_to_bool= method (jeremyevans)

* Deprecate Sequel::IBMDB.convert_smallint_to_bool accessor (jeremyevans)

* Add Sequel::IBMDB::Database#convert_smallint_to_bool accessor (jeremyevans)

* Deprecate sequel_3_dataset_methods extension (jeremyevans)

* Deprecate query_literals extension (jeremyevans)

* Deprecate using subtype conversion procs added after registering composite type in the pg_row extension (jeremyevans)

* Don't try canceling copy in Database#copy_into if copier is not created yet (aakashAu) (#1384)

* Deprecate global conversion procs added by pg_* extensions, when extension isn't loaded into Database instance (jeremyevans)

* Deprecate Sequel::Postgres::PGRange.register in the pg_range extension (jeremyevans)

* Deprecate Sequel::Postgres::PGArray.register in the pg_array extension (jeremyevans)

* Deprecate Database#copy_conversion_procs (private method) on PostgreSQL (jeremyevans)

* Deprecate Database#reset_conversion_procs on PostgreSQL (jeremyevans)
